<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialogNameUser">
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_input_round"
        android:textColor="@color/blackDark"
        android:textColorHint="@color/pinkA200"
        android:padding="8dp"
        android:hint="@string/name_user"
        android:layout_margin="8dp"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:autofillHints="no"/>
    <EditText
        android:id="@+id/edtFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_input_round"
        android:textColor="@color/blackDark"
        android:textColorHint="@color/pinkA200"
        android:padding="8dp"
        android:hint="@string/family_user"
        android:layout_margin="8dp"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:autofillHints="no"/>
    <Button
        android:id="@+id/btnSetUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@+id/edtFamily"
        android:text="@string/confirmation"
        android:background="@drawable/background_confirmation_button"
        android:textColor="@color/gray50"/>
</RelativeLayout>