<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_default"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionbarTop"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/transparent"
        app:title="محاسبه گر BMI"
        app:titleTextColor="@color/white" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="start"
            android:textColor="@color/gray50"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/family"
            android:layout_gravity="end"
            android:textColor="@color/gray50"
            android:textStyle="bold"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/height"
            android:layout_marginHorizontal="8dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/gray50"
            app:endIconMode="clear_text"
            android:background="@drawable/background_top_round">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="5"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spinnerHeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_spinner"
            android:paddingHorizontal="8dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/weight"
            android:layout_marginHorizontal="8dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/gray50"
            app:endIconMode="clear_text"
            android:background="@drawable/background_top_round">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:maxLength="5"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spinnerWeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_spinner"
            android:paddingHorizontal="8dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/btnCalcBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calc_anim"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_circle_button"
        android:elevation="40dp"
        android:contentDescription="@null"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="bottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_top_round"
            android:id="@+id/layoutContainerBmi">
            <ImageButton
                android:id="@+id/btnInfoBmiApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="4dp"
                android:src="@drawable/ic_info" />
            <TextView
                android:id="@+id/textScoreBmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score_bmi"
                android:textColor="@color/blackDark"
                android:padding="4dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_margin="8dp"
                tools:ignore="RelativeOverlap"/>
            <Button
                android:id="@+id/containerBmiScore"
                android:layout_below="@+id/textScoreBmi"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/zero"
                android:textSize="24sp"
                android:clickable="false"
                android:background="@drawable/background_container_round"/>
            <TextView
                android:id="@+id/textCategory"
                android:layout_below="@+id/textScoreBmi"
                android:layout_toEndOf="@+id/containerBmiScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/your_category"/>
            <TextView
                android:id="@+id/textMsgInfoWeight"
                android:layout_below="@+id/textCategory"
                android:layout_toEndOf="@+id/containerBmiScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginStart="8dp"
                android:text="@string/healthy_weight"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/containerBmiColor"
                android:layout_below="@+id/textCategory"
                android:layout_toEndOf="@+id/textMsgInfoWeight"
                android:layout_marginStart="8dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
            <com.rtugeek.android.colorseekbar.ColorSeekBar
                android:id="@+id/seekBarBmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/containerBmiScore"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:maxPosition="100"
                app:colorBarPosition="0"
                app:colorSeeds="@array/weight_colors"/>
            <TextView
                android:id="@+id/textDescriptionBmi"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/seekBarBmi"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/background_line"
                android:padding="4dp"
                app:autoSizeTextType="uniform"
                android:textDirection="rtl"
                android:text="@string/description_healthy_weight"
                android:justificationMode="inter_word"
                tools:targetApi="o"/>
            <com.example.calc.calc.bmi.UnderlineTextView
                android:id="@+id/textHealthyWeightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textDescriptionBmi"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:text="@string/range_your_healthy_weight"/>
            <TextView
                android:id="@+id/textHealthyWeightRangeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textDescriptionBmi"
                android:layout_toEndOf="@+id/textHealthyWeightTitle"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:textStyle="italic"
                android:text=""/>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>